--- a/styles/layout.scss
+++ b/styles/layout.scss
@@ -6,6 +6,7 @@ html {
 }
 
 #mapid {
-  height: 500px;
-  width: 1000px;
- }
+  justify-content: center;
+  align-items: center;
+  min-height: 100vh;
+}
