--- a/views/index.ejs
+++ b/views/index.ejs
@@ -3,10 +3,19 @@
   <head>
     <title>Home Page</title>
 
+    <!-- Bootstrap CSS -->
+    <link
+      rel="stylesheet"
+      href="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/css/bootstrap.min.css"
+      integrity="sha384-GJzZqFGwb1QTTN6wy59ffF1BuGJpLSa9DkKMp0DgiMDm4iYMj70gZWKYbI706tWS"
+      crossorigin="anonymous"
+    />
+
     <link rel="stylesheet" href="/vendor/normalize-4.1.1.css" type="text/css" />
     <link rel="stylesheet" href="/vendor/border-box.css" type="text/css" />
     <link rel="stylesheet" href="/styles/main.css" type="text/css" />
     <link rel="stylesheet" href="/styles/layout.css" type="text/css" />
+    <link rel="stylesheet" href="/styles/nav-bar.css" type="text/css" />
 
     <script type="text/javascript" src="/vendor/jquery-3.0.0.js"></script>
     <script type="text/javascript" src="/scripts/app.js"></script>
@@ -26,7 +35,45 @@
   </head>
 
   <body>
-    <!--<h1>Have fun! 🥔</h1>-->
+    <header>
+      <nav class="navbar navbar-expand-md navbar-dark">
+        <a class="navbar-brand" href="/">WikiMap</a>
+
+        <div class="navbar-nav">
+          <a class="nav-item nav-link" href="/api/all-maps">All Maps</a>
+          <a class="nav-item nav-link" href="/api/my-maps">May Maps</a>
+          <a class="nav-item nav-link" href="/api/my-favs">My Favorites</a>
+          <a class="nav-item nav-link" href="/api/my-contributions"
+            >My Collaborations</a
+          >
+          <a class="nav-item nav-link" href="/api/not-owned">Not Owned</a>
+        </div>
+        <% if (user) { %>
+        <form class="form-inline" action="/api/logout" method="POST">
+          <h5 class="navbar-brand nav-link"><%= user %>!</h5>
+          <div class="form-group mb-2">
+            <button type="submit" class="btn btn-danger">Logout</button>
+          </div>
+        </form>
+        <% } else { %>
+        <form
+          class="form-inline"
+          action="/register"
+          method="GET"
+          style="margin: 1em"
+        >
+          <div class="form-group mb-2">
+            <button type="submit" class="btn btn-primary">Register</button>
+          </div>
+        </form>
+        <form class="form-inline mb-2" action="/api/login/2" method="GET">
+          <div class="form-group">
+            <button type="submit" class="btn btn-primary">Login</button>
+          </div>
+        </form>
+        <% } %>
+      </nav>
+    </header>
     <div id="mapid"></div>
   </body>
 </html>
