--- a/views/new-map.ejs
+++ b/views/new-map.ejs
@@ -3,6 +3,14 @@
   <head>
     <title>Create Map</title>
 
+    <!-- Bootstrap CSS -->
+    <link
+      rel="stylesheet"
+      href="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/css/bootstrap.min.css"
+      integrity="sha384-GJzZqFGwb1QTTN6wy59ffF1BuGJpLSa9DkKMp0DgiMDm4iYMj70gZWKYbI706tWS"
+      crossorigin="anonymous"
+    />
+
     <link rel="stylesheet" href="/vendor/normalize-4.1.1.css" type="text/css" />
     <link rel="stylesheet" href="/vendor/border-box.css" type="text/css" />
     <link rel="stylesheet" href="/styles/main.css" type="text/css" />
@@ -26,6 +34,54 @@
   </head>
 
   <body>
+    <header>
+      <nav class="navbar navbar-expand-md navbar-dark bg-success">
+        <a class="navbar-brand" href="/urls">WikiMap</a>
+        <button
+          class="navbar-toggler"
+          type="button"
+          data-toggle="collapse"
+          data-target="#navbarNavAltMarkup"
+          aria-controls="navbarNavAltMarkup"
+          aria-expanded="false"
+          aria-label="Toggle navigation"
+        >
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
+          <div class="navbar-nav">
+            <a class="nav-item nav-link" href="/urls">My URLs</a>
+            <a class="nav-item nav-link" href="/urls/new">Create New URL</a>
+          </div>
+        </div>
+        <% if (user) { %>
+        <form class="form-inline" action="/logout" method="POST">
+          <h5 class="navbar-brand nav-link">
+            Logged in As: <%= user.email %>!
+          </h5>
+          <div class="form-group mb-2">
+            <button type="submit" class="btn btn-danger">Logout</button>
+          </div>
+        </form>
+        <% } else { %>
+        <form
+          class="form-inline"
+          action="/register"
+          method="GET"
+          style="margin: 1em"
+        >
+          <div class="form-group mb-2">
+            <button type="submit" class="btn btn-primary">Register</button>
+          </div>
+        </form>
+        <form class="form-inline mb-2" action="/login" method="GET">
+          <div class="form-group">
+            <button type="submit" class="btn btn-primary">Login</button>
+          </div>
+        </form>
+        <% } %>
+      </nav>
+    </header>
     <main style="margin: 1em">
       <div>
         <h3>Create A New Map</h3>
