--- a/views/partials/_header.ejs
+++ b/views/partials/_header.ejs
@@ -1,4 +1,12 @@
 
+<div class = "top-row">
+  <div>WikiMap</div>
+
+  <div class="username"> Logged in As:</div>
+
+</div>
+
+
       <div class="navbar-nav">
         <a class="nav-item" href="/api/all-maps">All Maps</a>
         <a class="nav-item" href="/api/my-maps">My Maps</a>
