--- a/styles/nav-bar.scss
+++ b/styles/nav-bar.scss
@@ -3,3 +3,13 @@
   justify-content: space-between;
   background-color: #50514f;
 }
+
+.access-buttons {
+  display: flex;
+}
+
+.btn-primary {
+  outline: none;
+  border: none;
+  background-color: #247ba0;
+}
