--- a/views/index.ejs
+++ b/views/index.ejs
@@ -37,8 +37,19 @@
   <body>
     <header>
       <nav class="navbar navbar-expand-md navbar-dark">
-        <a class="navbar-brand" href="/">WikiMap</a>
-
+        <div class="access-buttons">
+          <a class="navbar-brand" href="/">WikiMap</a>
+          <% if (user) { %>
+          <form class="form-inline mb-2" action="/api/create" method="GET">
+            <div class="form-group">
+              <button type="submit" class="btn btn-primary btn-create">
+                Create A New Map
+              </button>
+            </div>
+          </form>
+          <% } %>
+        </div>
+        <% if (user) { %>
         <div class="navbar-nav">
           <a class="nav-item nav-link" href="/api/all-maps">All Maps</a>
           <a class="nav-item nav-link" href="/api/my-maps">May Maps</a>
@@ -48,7 +59,7 @@
           >
           <a class="nav-item nav-link" href="/api/not-owned">Not Owned</a>
         </div>
-        <% if (user) { %>
+
         <form class="form-inline" action="/api/logout" method="POST">
           <h5 class="navbar-brand nav-link"><%= user %>!</h5>
           <div class="form-group mb-2">
@@ -56,21 +67,23 @@
           </div>
         </form>
         <% } else { %>
-        <form
-          class="form-inline"
-          action="/register"
-          method="GET"
-          style="margin: 1em"
-        >
-          <div class="form-group mb-2">
-            <button type="submit" class="btn btn-primary">Register</button>
-          </div>
-        </form>
-        <form class="form-inline mb-2" action="/api/login/2" method="GET">
-          <div class="form-group">
-            <button type="submit" class="btn btn-primary">Login</button>
-          </div>
-        </form>
+        <div class="access-buttons">
+          <form
+            class="form-inline"
+            action="/register"
+            method="GET"
+            style="margin: 1em"
+          >
+            <div class="form-group mb-2">
+              <button type="submit" class="btn btn-primary">Register</button>
+            </div>
+          </form>
+          <form class="form-inline mb-2" action="/api/login/2" method="GET">
+            <div class="form-group">
+              <button type="submit" class="btn btn-primary">Login</button>
+            </div>
+          </form>
+        </div>
         <% } %>
       </nav>
     </header>
