--- a/views/partials/_header.ejs
+++ b/views/partials/_header.ejs
@@ -8,6 +8,7 @@
 
 
       <div class="navbar-nav">
+        <a class="nav-item" href="/api/profile">My Profile</a>
         <a class="nav-item" href="/api/all-maps">All Maps</a>
         <a class="nav-item" href="/api/my-maps">My Maps</a>
         <a class="nav-item" href="/api/my-favs">My Favorites</a>
