--- a/views/partials/_header.ejs
+++ b/views/partials/_header.ejs
@@ -1,18 +1,13 @@
-
-<div class = "top-row">
+<div class="top-row">
   <div>WikiMap</div>
 
-  <div class="username"> Logged in As:</div>
-
+  <div class="username">Logged in As: <%= user %></div>
 </div>
 
-
-      <div class="navbar-nav">
-        <a class="nav-item" href="/api/all-maps">All Maps</a>
-        <a class="nav-item" href="/api/my-maps">My Maps</a>
-        <a class="nav-item" href="/api/my-favs">My Favorites</a>
-        <a class="nav-item" href="/api/my-contributions">My Contributions</a>
-        <a class="nav-item" href="/api/not-owned">Explore</a>
-      </div>
-
-
+<div class="navbar-nav">
+  <a class="nav-item" href="/api/all-maps">All Maps</a>
+  <a class="nav-item" href="/api/my-maps">My Maps</a>
+  <a class="nav-item" href="/api/my-favs">My Favorites</a>
+  <a class="nav-item" href="/api/my-contributions">My Contributions</a>
+  <a class="nav-item" href="/api/not-owned">Explore</a>
+</div>
