--- a/views/gallerypages.ejs
+++ b/views/gallerypages.ejs
@@ -1,9 +1,8 @@
-
 <!DOCTYPE html>
 <html lang="en">
   <head>
     <title>Home Page</title>
-    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
     <link rel="stylesheet" href="/vendor/normalize-4.1.1.css" type="text/css" />
     <link rel="stylesheet" href="/vendor/border-box.css" type="text/css" />
     <link rel="stylesheet" href="/styles/main.css" type="text/css" />
@@ -12,7 +11,6 @@
     <script type="text/javascript" src="/vendor/jquery-3.0.0.js"></script>
     <script type="text/javascript" src="/scripts/app.js"></script>
     <script type="text/javascript" src="/scripts/getLocation.js"></script>
-
 
     <link
       rel="stylesheet"
@@ -30,15 +28,19 @@
   <body>
     <%- include('partials/_header') %>
 
-    <div class ="gallery">
-          <% for(let map in gallerymaps) { %>
-          <div class="triple-box">
-              <div class= "map-box">
-                <div class="map-pic"><img src="<%gallerymaps[map]['thumbnail_image']%>"></div>
-                <div class="map-name"><%= gallerymaps[map]['name'] %></div>
-              </div>
+    <div class="gallery">
+      <% for(let map in gallerymaps) { %>
+      <div class="triple-box">
+        <div class="map-box">
+          <div class="map-pic">
+            <img
+              src="https://images.unsplash.com/photo-1553864250-05b20249ee0c?ixid=MnwxMjA3fDB8MHxzZWFyY2h8MXx8bWFwc3xlbnwwfHwwfHw%3D&ixlib=rb-1.2.1&auto=format&fit=crop&w=300&q=60"
+            />
           </div>
-          <% } %>
+          <div class="map-name"><%= gallerymaps[map]['name'] %></div>
+        </div>
+      </div>
+      <% } %>
     </div>
   </body>
 </html>
