--- a/views/not-owned.ejs
+++ b/views/not-owned.ejs
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <title>Create Map</title>
+    <title>Not Owned</title>
 
     <!-- Bootstrap CSS -->
     <link
@@ -86,26 +86,30 @@
         <% } %>
       </nav>
     </header>
-    <main style="margin: 1em">
-      <!-- <div>
-        <h3>Create A New Map</h3>
-        <form action="/api/create" method="POST">
-          <div>
-            <h5 class="map__title"><%= map.name %></h5>
-            <input
-              type="text"
-              name="map_name"
-              style="width: 300px; margin: 1em"
+    <div>
+      <% if (maps.length > 0) { %>
+      <div class="grid">
+        <% for (let map of maps) { %>
+        <article class="card map-item">
+          <div class="map__image">
+            <img
+              src="https://images.unsplash.com/photo-1553864250-05b20249ee0c?ixid=MnwxMjA3fDB8MHxzZWFyY2h8MXx8bWFwc3xlbnwwfHwwfHw%3D&ixlib=rb-1.2.1&auto=format&fit=crop&w=400&q=60"
+              alt=""
             />
-            <label for="description">Description</label>
-            <textarea name="description" style="width: 300px; margin: 1em">
-            </textarea>
-            <div>
-              <button type="submit">Submit</button>
-            </div>
           </div>
-        </form>
-      </div> -->
-    </main>
+          <div class="card__content">
+            <h4 class="map__title"><%= map.name %></h4>
+          </div>
+          <div class="card__actions">
+            <h5 class="map__title"><%= map.name %></h5>
+          </div>
+        </article>
+        <% } %>
+      </div>
+      <% } else { %>
+      <h3>No map has been created by you</h3>
+      <h4>Start creating some maps</h4>
+      <% } %>
+    </div>
   </body>
 </html>
