Fix the new map form modal

--- a/views/not-owned.ejs
+++ b/views/not-owned.ejs
@@ -98,10 +98,10 @@
             />
           </div>
           <div class="card__content">
-            <h4 class="map__title"><%= map.name %></h4>
+            <h5 class="map__title"><%= map.name %></h5>
           </div>
           <div class="card__actions">
-            <h5 class="map__title"><%= map.name %></h5>
+            <button class="btn btn-primary">View Map</button>
           </div>
         </article>
         <% } %>
