--- a/views/my-Maps-list.ejs
+++ b/views/my-Maps-list.ejs
@@ -101,7 +101,7 @@
             <h5 class="map__title"><%= map.name %></h5>
           </div>
           <div class="card__actions">
-            <button class=".btn_view-map">View Map</button>
+            <button class="btn btn-primary">View Map</button>
           </div>
         </article>
         <% } %>
