--- a/views/create-map.ejs
+++ b/views/create-map.ejs
@@ -1,15 +1,14 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <title>Home Page</title>
+    <title>Create Map</title>
 
     <%- include('partials/_head') %>
   </head>
 
   <body>
-    <%- include('partials/_form-modal') %>
     <header><%- include('partials/_nav-bar') %></header>
     <div id="mapid"></div>
-    <%- include('partials/_foot-scripts') %> <%- include('partials/_footer') %>
   </body>
+  <%- include('partials/_foot-scripts') %> <%- include('partials/_footer') %>
 </html>
