--- a/styles/profile.scss
+++ b/styles/profile.scss
@@ -1,7 +1,7 @@
 
 .user-bit {
   padding-top: 20px;
-  margin: auto;
+  margin-left: 35%;
   font-family: 'Rampart One', cursive;
   font-size: 48px;
 }
@@ -23,7 +23,8 @@
   font-weight: bolder;
   font-size: xx-large;
   font-family: 'Indie Flower', cursive;
-  background-color: rgb(48, 122, 196);
+  background-color: rgb(201, 173, 14);
+  color: rgb(125, 136, 146);
 
 }
 
@@ -31,7 +32,7 @@
   text-align: center;
   font-family: 'Indie Flower', cursive;
   font-size: larger;
-  background-color: lightsteelblue;
+  background-color: white;
 }
 
 
