--- a/views/gallerypages.ejs
+++ b/views/gallerypages.ejs
@@ -8,9 +8,11 @@
     <link rel="stylesheet" href="/styles/main.css" type="text/css" />
     <link rel="stylesheet" href="/styles/layout.css" type="text/css" />
 
+
     <script type="text/javascript" src="/vendor/jquery-3.0.0.js"></script>
     <script type="text/javascript" src="/scripts/app.js"></script>
     <script type="text/javascript" src="/scripts/getLocation.js"></script>
+    <script type="text/javascript" src="/scripts/getMap.js"></script>
 
     <link
       rel="stylesheet"
@@ -31,14 +33,17 @@
     <div class="gallery">
       <% for(let map in gallerymaps) { %>
       <div class="triple-box">
+
         <div class="map-box">
-          <div class="map-pic">
-            <img
-              src="https://images.unsplash.com/photo-1553864250-05b20249ee0c?ixid=MnwxMjA3fDB8MHxzZWFyY2h8MXx8bWFwc3xlbnwwfHwwfHw%3D&ixlib=rb-1.2.1&auto=format&fit=crop&w=300&q=60"
-            />
-          </div>
+
+          <div class="pic"><img
+            src="https://images.unsplash.com/photo-1553864250-05b20249ee0c?ixid=MnwxMjA3fDB8MHxzZWFyY2h8MXx8bWFwc3xlbnwwfHwwfHw%3D&ixlib=rb-1.2.1&auto=format&fit=crop&w=300&q=60"/>
+           </div>
           <div class="map-name"><%= gallerymaps[map]['name'] %></div>
-        </div>
+
+
+          </div>
+
       </div>
       <% } %>
     </div>
