--- a/views/gallerypages.ejs
+++ b/views/gallerypages.ejs
@@ -34,7 +34,7 @@
       <% for(let map in gallerymaps) { %>
       <div class="triple-box">
 
-        <div class="map-box">
+        <a class="map-box" href="/maps/<%= gallerymaps[map]['id'] %>">
 
           <div class="pic"><img
             src="https://images.unsplash.com/photo-1553864250-05b20249ee0c?ixid=MnwxMjA3fDB8MHxzZWFyY2h8MXx8bWFwc3xlbnwwfHwwfHw%3D&ixlib=rb-1.2.1&auto=format&fit=crop&w=300&q=60"/>
@@ -42,7 +42,7 @@
           <div class="map-name"><%= gallerymaps[map]['name'] %></div>
 
 
-          </div>
+          </a>
 
       </div>
       <% } %>
