--- a/views/partials/_form-modal.ejs
+++ b/views/partials/_form-modal.ejs
@@ -21,7 +21,7 @@ aria-hidden="true"
       </button>
     </div>
     <div class="modal-body">
-      <form  class="modal-form" action="/api/create" method="POST">
+      <form  class="modal-form" action="/maps" method="POST">
         <div class="form-group">
           <label for="map_name">Map Name</label>
           <input
