--- a/views/partials/_nav-bar.ejs
+++ b/views/partials/_nav-bar.ejs
@@ -17,7 +17,7 @@
 
   <div class="navbar-nav">
     <a class="nav-item nav-link" href="/maps">All Maps</a>
-    <a class="nav-item nav-link" href="/user/maps">May Maps</a>
+    <a class="nav-item nav-link" href="/user/maps">My Maps</a>
     <a class="nav-item nav-link" href="/user/favorites">My Favorites</a>
     <a class="nav-item nav-link" href="/user/contributions"
       >My Collaborations</a
