--- a/views/partials/_head.ejs
+++ b/views/partials/_head.ejs
@@ -14,7 +14,7 @@
 <link rel="stylesheet" href="/styles/my-maps.css" type="text/css" />
 <link rel="stylesheet" href="/styles/map-modal-form.css" type="text/css" />
 <link rel="stylesheet" href="/styles/footer.css" type="text/css" />
-<link rel="stylesheet" href="/styles/new-map.css" type="text/css" />
+<link rel="stylesheet" href="/styles/map.css" type="text/css" />
 
 <script type="text/javascript" src="/vendor/jquery-3.0.0.js"></script>
 <script type="text/javascript" src="/scripts/app.js"></script>
