--- a/views/my-Maps-list.ejs
+++ b/views/my-Maps-list.ejs
@@ -13,20 +13,21 @@
       <% if (maps.length > 0) { %>
       <div class="grid">
         <% for (let map of maps) { %>
-        <article class="card map-item">
-          <div class="map__image">
-            <img
-              src="https://images.unsplash.com/photo-1553864250-05b20249ee0c?ixid=MnwxMjA3fDB8MHxzZWFyY2h8MXx8bWFwc3xlbnwwfHwwfHw%3D&ixlib=rb-1.2.1&auto=format&fit=crop&w=400&q=60"
-              alt=""
-            />
-          </div>
-          <div class="card__content">
-            <h5 class="map__title"><%= map.name %></h5>
-          </div>
-          <div class="card__actions">
-            <button class="btn btn-primary">View Map</button>
-          </div>
-        </article>
+          <a href="/maps/<%= map['id'] %>">
+            <article class="card map-item">
+              <div class="map__image">
+                <img
+                  src="https://images.unsplash.com/photo-1553864250-05b20249ee0c?ixid=MnwxMjA3fDB8MHxzZWFyY2h8MXx8bWFwc3xlbnwwfHwwfHw%3D&ixlib=rb-1.2.1&auto=format&fit=crop&w=400&q=60"
+                  alt=""
+                />
+              </div>
+              <div class="card__content">
+                <h5 class="map__title"><%= map.name %></h5>
+              </div>
+              <div class="card__actions">
+                <button class="btn btn-primary">View Map</button>
+              </div>
+            </article>
         <% } %>
       </div>
       <% } else { %>
