--- a/views/map.ejs
+++ b/views/map.ejs
@@ -17,7 +17,7 @@
               class="form-control mr-sm-2 search_input"
               type="search"
               placeholder="Search A Location"
-              aria-label="Search "
+              aria-label="Search"
             />
             <button class="btn btn-outline-success my-2 my-sm-0" type="submit">
               Search
@@ -28,7 +28,12 @@
       <div class="map-creator">
         <div class="side-bar__new-map">
           <div class="side-bar__header">
-            <h3><%= mapName %></h3>
+            <h5><%= mapName %></h5>
+          </div>
+          <div class="pins">
+            <ul>
+              <h6>Pin 1</h6>
+            </ul>
           </div>
         </div>
         <div id="mapid"></div>
