--- a/styles/layout.scss
+++ b/styles/layout.scss
@@ -10,6 +10,7 @@ html {
 #mapid {
   min-height: 70vh;
   width: 70%;
+  border: 5px solid grey;
   // display: flex;
   // flex-direction: column;
   // overflow-y: scroll;
