--- a/views/partials/_head.ejs
+++ b/views/partials/_head.ejs
@@ -19,7 +19,7 @@
 <script type="text/javascript" src="/vendor/jquery-3.0.0.js"></script>
 <script type="text/javascript" src="/scripts/app.js"></script>
 <script type="text/javascript" src="/scripts/getLocation.js"></script>
-<script type="text/javascript" src="/scripts/getLocation.js"></script>
+<script type="text/javascript" src="/scripts/map.js"></script>
 
 <link
   rel="stylesheet"
@@ -27,8 +27,3 @@
   integrity="sha512-xodZBNTC5n17Xt2atTPuE1HxjVMSvLVW9ocqUKLsCC5CXdbqCmblAshOMAS6/keqq/sMZMZ19scR4PsZChSR7A=="
   crossorigin=""
 />
-<script
-  src="https://unpkg.com/leaflet@1.7.1/dist/leaflet.js"
-  integrity="sha512-XQoYMqMTK8LvdxXYG3nZ448hOEQiglfqkJs1NOQV44cWnUrBc8PkAOcXy20w0vlaXaVUearIOBhiXZ5V3ynxwA=="
-  crossorigin=""
-></script>
