single map entry fixed

--- a/views/map.ejs
+++ b/views/map.ejs
@@ -8,7 +8,7 @@
   </head>
 
   <body>
-    <header><%- include('partials/_nav-bar') %></header>
+    <header><%- include('partials/_header') %></header>
 
     <main data-id="id">
       <div class="main_container">
