--- a/styles/layout.scss
+++ b/styles/layout.scss
@@ -69,7 +69,7 @@ html {
   width: 100%;
   flex-direction: row;
   background-color: lightslategrey;
-  position: fixed;
+  position: relative;
   top: 20px;
   left: 0;
   justify-content: space-between;
