--- a/views/all-maps.ejs
+++ b/views/all-maps.ejs
@@ -7,7 +7,7 @@
 
   <body>
     <%- include('partials/_form-modal') %>
-    <header><%- include('partials/_nav-bar') %></header>
+    <header><%- include('partials/_header') %></header>
     <div>
       <% if (maps.length > 0) { %>
       <div class="grid">
