--- a/views/gallerypages.ejs
+++ b/views/gallerypages.ejs
@@ -12,7 +12,7 @@
     <script type="text/javascript" src="/scripts/app.js"></script>
     <script type="text/javascript" src="/scripts/getLocation.js"></script>
     <script type="text/javascript" src="/scripts/getMap.js"></script>
-
+    <%- include('partials/_head') %>
     <link
       rel="stylesheet"
       href="https://unpkg.com/leaflet@1.7.1/dist/leaflet.css"
