--- a/views/index.ejs
+++ b/views/index.ejs
@@ -8,7 +8,7 @@
 
   <body>
     <%- include('partials/_form-modal') %>
-    <header><%- include('partials/_nav-bar') %></header>
+    <header><%- include('partials/_header') %></header>
     <div id="mapid"></div>
     <%- include('partials/_foot-scripts') %> <%- include('partials/_footer') %>
   </body>
