--- a/views/my-favs.ejs
+++ b/views/my-favs.ejs
@@ -8,7 +8,7 @@
 
   <body>
     <%- include('partials/_form-modal') %>
-    <header><%- include('partials/_nav-bar') %></header>
+    <header><%- include('partials/_header') %></header>
     <div>
       <% if (maps.length > 0) { %>
       <div class="grid">
