--- a/views/user-profile.ejs
+++ b/views/user-profile.ejs
@@ -13,7 +13,7 @@
 
   <body>
     <%- include('partials/_header') %>
-    <div class="user-bit"><h4><%= userInfo[0]['name'] %></h4></div>
+    <div class="user-bit"><%= userInfo[0]['name'] %></div>
     <div class="table-box">
     <table class="favs-table">
       <thead class="tab-head">
