--- a/views/map.ejs
+++ b/views/map.ejs
@@ -29,12 +29,22 @@
       <div class="map-creator">
         <div class="side-bar__new-map">
           <div class="side-bar__header">
-            <div><%= mapName[0]['name'] %></div>
-            <div><%= user %></div>
-            <h5>Pins</h5>
-                      <% for(let pin in pins) { %>
-                          <div class="map-name"><%= pins[pin]['title'] %></div>
-                      <% } %>
+            <div class="m-name"><%= mapName %></div>
+
+            <table class="pins-table">
+              <thead class="tab-head">
+                <tr>
+                  <th scope="col">Pins</th>
+                </tr>
+              </thead>
+              <tbody>
+                <% for(let pin in pins) { %>
+                  <tr>
+                    <td class="map-name"><%= pins[pin]['title'] %></td>
+                  </tr>
+                <% } %>
+              </tbody>
+            </table>
 
           </div>
         </div>
