table append started

--- a/views/map.ejs
+++ b/views/map.ejs
@@ -51,7 +51,7 @@
                   <th scope="col">Pins</th>
                 </tr>
               </thead>
-              <tbody>
+              <tbody class="pintab">
                 <% for(let pin in pins) { %>
                   <tr>
                     <td class="map-name"><%= pins[pin]['title'] %></td>
