--- a/views/map.ejs
+++ b/views/map.ejs
@@ -44,14 +44,13 @@
         <div class="side-bar__new-map">
           <div class="side-bar__header">
             <div class="m-name"><%= mapName %></div>
-
             <table class="pins-table">
               <thead class="tab-head">
                 <tr>
                   <th scope="col">Pins</th>
                 </tr>
               </thead>
-              <tbody>
+              <tbody id="pin-list">
                 <% for(let pin in pins) { %>
                   <tr>
                     <td class="map-name"><%= pins[pin]['title'] %></td>
