Fix style issue on map page

--- a/views/partials/_head.ejs
+++ b/views/partials/_head.ejs
@@ -8,20 +8,20 @@
 
 <link rel="stylesheet" href="/vendor/normalize-4.1.1.css" type="text/css" />
 <link rel="stylesheet" href="/vendor/border-box.css" type="text/css" />
-<link rel="stylesheet" href="/styles/main.css" type="text/css" />
 <link rel="stylesheet" href="/styles/layout.css" type="text/css" />
 <link rel="stylesheet" href="/styles/nav-bar.css" type="text/css" />
-<link rel="stylesheet" href="/styles/my-maps.css" type="text/css" />
 <link rel="stylesheet" href="/styles/map-modal-form.css" type="text/css" />
 <link rel="stylesheet" href="/styles/footer.css" type="text/css" />
 <link rel="stylesheet" href="/styles/map.css" type="text/css" />
+<link rel="stylesheet" href="/styles/gallery.css" type="text/css" />
+<link rel="stylesheet" href="/vendor/border-box.css" type="text/css" />
+<link rel="stylesheet" href="/styles/profile.css" type="text/css" />
 
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
 
 <script type="text/javascript" src="/scripts/app.js"></script>
 <script type="text/javascript" src="/scripts/map.js"></script>
 <script type="text/javascript" src="/scripts/addPin.js"></script>
-
 
 <link
   rel="stylesheet"
