--- a/styles/gallery.scss
+++ b/styles/gallery.scss
@@ -1,4 +1,3 @@
-
 .gallery {
   display: flex;
   align-content: space-between;
@@ -32,7 +31,6 @@
   padding-bottom: 30px;
   margin-bottom: 30px;
   border-radius: 10px;
-
 }
 
 .map-box:hover {
@@ -40,7 +38,7 @@
 }
 
 img {
-  border-radius: 10px 10px 0px 0px
+  border-radius: 10px 10px 0px 0px;
 }
 
 .map-box:nth-child(n + 4) {
